test/tests/stages/16_characters_and_strings/valid/chars/push_arg_on_page_boundary.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: zed
        None: 
        Char: 
        CExtern: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[7]: 
          TIdentifier: a
          TIdentifier: b
          TIdentifier: c
          TIdentifier: d
          TIdentifier: e
          TIdentifier: f
          TIdentifier: g
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CBinary: 
                  CAdd: 
                  CVar: 
                    TIdentifier: g
                    None: 
                  CConstant: 
                    CConstInt: 
                      TInt: 1
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[7]: 
            Int: 
            Int: 
            Int: 
            Int: 
            Int: 
            Int: 
            Char: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CFunctionCall: 
                  TIdentifier: foo
                  List[7]: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                    CVar: 
                      TIdentifier: zed
                      None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
