test/tests/stages/16_characters_and_strings/invalid_types/char_and_uchar_conflict.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[1]: 
          TIdentifier: c
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CVar: 
                  TIdentifier: c
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            UChar: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CFunctionCall: 
                  TIdentifier: foo
                  List[1]: 
                    CConstant: 
                      CConstInt: 
                        TInt: 0
                      None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: foo
        List[1]: 
          TIdentifier: c
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[1]: 
            Char: 
          Int: 
        None: 
